# py-practice

./: .gitignore  contacts.py  filter_servers.py  find_ssh.py  find_users.py  get_size.py  greeter.py  modify_json.py  read_config.py  servers.csv  us_east_report.csv  who.py
aws-manager/: pyproject.toml  requirements.txt
aws-manager/src/aws_manager/: ec2_ops.py  main.py  s3_ops.py
aws-manager/tests/: test_s3_ops.py
boot_dev/: alchemy.py
health_check_project/: api_check.py  get_product.py  health_check.py  promote_user.py  read_yaml.py  requirements.txt  updated_users.json
integrator/: pyproject.toml  requirements.txt
integrator/src/git_manager/: config.py  create_repo_ops.py  list_repos_ops.py  main.py
integrator/tests/: test_create_repo.py  test_list_repos.py
jformat/: jformat.py  users.json
level_4/: check_env.py  create_user.py
level_5/: inspect_bucket.py  list_instances.py  list_users.py  requirements.txt
log_file_analyzer/: main.py
logging_practice/: logging_practice.py  requirements.txt  test_calculator.py
lvl_7/: backup_server.py  reference.py  requirements.txt  sysinfo_server.py  text1.txt
push-to-deploy/: Dockerfile  payload.json  requirements.txt  server.py  upload_to_s3_ops.py
pytest_dojo/: data_processor.py  ignore.py  requirements.txt  string_utils.py  test_data_processor.py
terra_orch/: .terraform.lock.hcl  main.tf  run_tf.py
todo_app/: Dockerfile  requirements.txt  todo_server.py
yaml_to_json_converter/: README.md  config.json  config.yaml  converter.py  main.py  requirements.txt  test_converter.py
(+4 files in other folders)
